--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:name=".ShamelaApp"
         android:allowBackup="true"
@@ -13,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShamelaLibrary"
         tools:targetApi="31">
-        <profileable
-            android:shell="true"
-            />
+        <profileable android:shell="true" />
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
@@ -27,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".presentation.reciever.DownloadCompleteReceiver"/>
     </application>
 
 </manifest>
