--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,12 @@ dependencies {
     //-> Compose Navigation
     implementation "androidx.navigation:navigation-compose:$navigation_compose"
 
-    //-> Readium dependencies (for dealing with epub)
-    implementation "org.readium.kotlin-toolkit:readium-shared:$readium_version"
-    implementation "org.readium.kotlin-toolkit:readium-streamer:$readium_version"
-    implementation "org.readium.kotlin-toolkit:readium-navigator:$readium_version"
-    implementation "org.readium.kotlin-toolkit:readium-opds:$readium_version"
-    implementation "org.readium.kotlin-toolkit:readium-lcp:$readium_version"
+    //-> FolioReader dependencies (for dealing with epub)
+    implementation "com.folioreader:folioreader:0.5.4"
+
+    //-> SAF : Storage Access Framework dependency
+    implementation 'androidx.documentfile:documentfile:1.0.1'
+
 
     //-> Hilt DI
     implementation "com.google.dagger:hilt-android:$hilt_version"
