Migrating Folio Activity To Compose [First Stage]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <receiver android:name=".presentation.reciever.DownloadCompleteReceiver" />
 
         <activity
-            android:name="com.folioreader.ui.activity.FolioActivity"
+            android:name="com.folioreader.ui.activity.folioActivity.FolioActivity"
             android:exported="false"
             android:theme="@style/FolioActivityDayTheme" />
         <activity
