--- a/folioreader/AndroidManifest.xml
+++ b/folioreader/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false" />
 
         <activity
-            android:name="com.folioreader.ui.activity.FolioActivity"
+            android:name="com.folioreader.ui.activity.folioActivity.FolioActivity"
             android:label="@string/app_name"
             android:theme="@style/FolioActivityDayTheme"
             android:exported="false"/>
