--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     apply from: 'versions.gradle'
     ext {
-        firebase_bom = '32.1.0'
+        firebase_bom = '32.3.1'
         google_services = '4.3.15'
-        crashlytics = '2.9.5'
+        crashlytics = '2.9.9'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt_version"
@@ -17,4 +17,5 @@ plugins {
     id 'com.android.application' version '8.1.0-rc01' apply false
     id 'com.android.library' version '8.1.0-rc01' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
+    id 'com.google.firebase.crashlytics' version "$crashlytics" apply false
 }
