fix search results screen, books not opening if category is "all"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation platform("org.jetbrains.kotlin:kotlin-bom:$versions.kotlin_bom")
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle_runtime_ktx"
     implementation "androidx.activity:activity-compose:$versions.compose_activity"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
 
     //-> Gson library
     implementation "com.google.code.gson:gson:$versions.gson"
@@ -72,6 +73,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.material:material-icons-extended"
+
 
     //-> Compose Navigation
     implementation "androidx.navigation:navigation-compose:$versions.navigation_compose"
